--- a/react-websocket-client/index.html
+++ b/react-websocket-client/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Captive Portal website written in React" />
-    <title>Captive Portal</title>
+    <meta name="description" content="Wordclock by Uniquelymade" />
+    <title>Wordclock by Uniquelymade</title>
 </head>
 
 <body>
